--- a/pgt52m/week-9/workshop.qmd
+++ b/pgt52m/week-9/workshop.qmd
@@ -56,9 +56,24 @@ Record your answers in your script for future reference.
 
 # Assessment introduction
 
-[Specimen.Rproj](data-raw/specimen.zip)
+During this module, you should have learnt in the first eight weeks how to create and plot data and understand the appropriate statistical tests that can be used to analyse biological data. For the assessment, you will be provided with a messy data set with which to address key questions, and will submit a reproducible analysis in quarto markdown format. In this week we are introducing the format of the assessment and giving you an example assessment and we will look at the marking criteria. In the following workshop we will be looking at how to do reproducible reporting using quarto which you will need for your assessment. You will have a further opportunity to ask questions about the assessment during the final week workshop which is a drop-in session.
+
+The assessment will be released on the VLE on the **11th of December**, the deadline for submission of the assessment will be the **15th of January 2024**. You will be required to come up with a hypothesis to test on the dataset given and write the results section of a report which will comprise of figures with appropriate captions (figure legends), tables (where appropriate), and a text that will connect the figures and tables/statistical results together. You should submit a zipped Rproject containing an annotated quarto markdown file with R code embedded that reads in data, reformats or reshapes it as required, calculates statistics, and draws the figures.
+
+There should be sufficient annotation for a reader to follow the steps in the R code.  The datasets will be made available to you on the VLE under ‘Module Assessment’. The marking assessment criteria will also be available to you on the VLE under Module Assessment and also [here](https://docs.google.com/document/d/1zCuQUqUa3HtAcAn87tsNnolDiE2IRlcqj6y3_5gu5oM/edit?usp=sharing)
 
 
+# Specimen assessment
+
+Here is a specimen Rproject:[Specimen.Rproj](data-raw/specimen.zip)
+
+You will need to first unzip this project so you can see the contents, this should contain the folders figures, data_raw, figures and a .qmd file.
+
+Here is a specimen results section of a report generated based on the analysis of the specimen data:[Specimen.docx](data-raw/specimen.docx)
+
+# Assessment criteria
+
+It is good to familiarise yourself with the marking criteria so that you know what things are marked in the assessment and to give yourself a checklist of things to make sure you have included. The marking criteria can be found here](https://docs.google.com/document/d/1zCuQUqUa3HtAcAn87tsNnolDiE2IRlcqj6y3_5gu5oM/edit?usp=sharing) and on the VLE under module assessment. 
 
 You're finished!
 
