add in extra consolidation section. Edit google link

--- a/pgt52m/week-9/study_after_workshop.qmd
+++ b/pgt52m/week-9/study_after_workshop.qmd
@@ -13,3 +13,4 @@ format:
 1.  Consolidate
 
     i.  📖 Read [Workflow and scripts - Projects](https://r4ds.hadley.nz/workflow-scripts.html)
+    ii. 📖 Read [Intro to quarto](https://r4ds.hadley.nz/quarto)
