--- a/pgt52m/week-9/workshop.qmd
+++ b/pgt52m/week-9/workshop.qmd
@@ -72,11 +72,11 @@ There should be sufficient annotation for a reader to follow the steps in the R 
 
 ![](images/do_on_your_computer.png) You will need to first unzip this project so you can see the contents, this should contain the folders figures, data_raw, figures and a .qmd file.
 
-Here is a specimen results section of a report generated based on the analysis of the specimen data:[Specimen.docx](data-raw/specimen.docx)
+![](images/do_on_your_computer.png) Here is a specimen results section of a report generated based on the analysis of the specimen data:[Specimen.docx](data-raw/specimen.docx)
 
 # Assessment criteria
 
-![](images/do_on_internet.png) It is good to familiarise yourself with the [marking criteria for module assessment](https://docs.google.com/document/d/1zCuQUqUa3HtAcAn87tsNnolDiE2IRlcqj6y3_5gu5oM/edit?usp=sharing) so that you know what things are marked in the assessment and to give yourself a checklist of things to make sure you have included. 
+![](images/do_on_internet.png) It is good to familiarise yourself with the [marking criteria for module assessment](https://docs.google.com/document/d/1zCuQUqUa3HtAcAn87tsNnolDiE2IRlcqj6y3_5gu5oM/edit?usp=sharing) so that you know what things are marked in the assessment and to give yourself a checklist of things to make sure you have included.
 You're finished!
 
 # 🥳 Well Done! 🎉
