--- a/r4babs1/week-9/overview.qmd
+++ b/r4babs1/week-9/overview.qmd
@@ -5,7 +5,7 @@ toc: true
 toc-location: right
 ---
 
-Last week you summarised and plotted single variables. This week you will start plotting data sets with more than one variable. This means you need to be able determine which variable is the response and which is the explanatory. You will find out what is meant by "tidy" data and how to perform a simple data tidying task. Finally you will discover how to save your figures and place them in documents.
+Last week you summarised and plotted single variables. This week you will start plotting data sets with more than one variable. This means you need to be able determine which variable is the response and which is the explanatory. You will find out what is meant by "tidy" data and how to perform a simple data tidying task. Finally you will discover how to save your figures to file.
 
 
 
@@ -15,8 +15,8 @@ Last week you summarised and plotted single variables. This week you will start 
 -   summarise and plot appropriately datasets with more than one variable
 -   recognise that variables can be categorised by their role in analysis
 -   explain what is meant by 'tidy' data and be able to perform some data tidying tasks.
--   save figures to file
--   create neat reports which include text and figures
+-   save figures to file by scripting
+
 
 ### Instructions
 
@@ -31,7 +31,7 @@ Last week you summarised and plotted single variables. This week you will start 
     
     ii. 💻  Practice with working directories, importing data, formatting figures and the pipe
 
-    ii. 💻  Lay out text, figures and figure legends in documents 
+    ii. 💻  Script saving figures to file for reproducibility 
 
 3.  [Consolidate](study_after_workshop.qmd)
 
